Implement very basic support for "partial success" authentication
When a server requires multiple authentication methods, it will return SSH_MSG_USERAUTH_FAILURE for successful authentications until all required methods have been completed successfully. Each failure message will include a flag indicating whether nor not it is part of a multiple authentication scenario.

This change identifies these "partial success" messages and returns a new error code. This allows users to distinguish between an authentication failure and a partial success.

--- a/docs/libssh2_userauth_keyboard_interactive_ex.3
+++ b/docs/libssh2_userauth_keyboard_interactive_ex.3
@@ -57,5 +57,8 @@ number, it is not really a failure per se.
 
 \fILIBSSH2_ERROR_AUTHENTICATION_FAILED\fP - failed, invalid username/password
 or public/private key.
+
+\fILIBSSH2_ERROR_AUTH_PARTIAL_SUCCESS\fP - Authentication was successful, but
+further authentication with another method is still required.
 .SH SEE ALSO
 .BR libssh2_session_init_ex(3)
