--- a/docs/libssh2_userauth_publickey_fromfile_ex.3
+++ b/docs/libssh2_userauth_publickey_fromfile_ex.3
@@ -49,5 +49,8 @@ combination was invalid.
 
 \fILIBSSH2_ERROR_AUTHENTICATION_FAILED\fP - Authentication using the supplied
 public key was not accepted.
+
+\fILIBSSH2_ERROR_AUTH_PARTIAL_SUCCESS\fP - Authentication was successful, but
+further authentication with another method is still required.
 .SH SEE ALSO
 .BR libssh2_session_init_ex(3)
