--- a/docs/libssh2_userauth_publickey_frommemory.3
+++ b/docs/libssh2_userauth_publickey_frommemory.3
@@ -54,6 +54,9 @@ combination was invalid.
 
 \fILIBSSH2_ERROR_AUTHENTICATION_FAILED\fP - Authentication using the supplied
 public key was not accepted.
+
+\fILIBSSH2_ERROR_AUTH_PARTIAL_SUCCESS\fP - Authentication was successful, but
+further authentication with another method is still required.
 .SH AVAILABILITY
 libssh2_userauth_publickey_frommemory was added in libssh2 1.6.0
 .SH SEE ALSO
